--- a/akka/pom.xml
+++ b/akka/pom.xml
@@ -1,21 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <packaging>pom</packaging>
 
     <parent>
         <groupId>com.echo.serenity</groupId>
-        <artifactId>cache</artifactId>
+        <artifactId>velen</artifactId>
         <version>${revision}</version>
     </parent>
 
-    <artifactId>kcache</artifactId>
+    <artifactId>akka</artifactId>
+
 
     <dependencies>
         <dependency>
-            <groupId>javax.cache</groupId>
-            <artifactId>cache-api</artifactId>
+            <groupId>com.typesafe.akka</groupId>
+            <artifactId>akka-actor-typed_2.13</artifactId>
         </dependency>
     </dependencies>
+
 </project>
